# task-delegation

./: pyproject.toml
backend/app/: config.py  database.py  gmail_service.py  main.py  prompt_template_profile.py  slack_service.py
backend/app/routes/: example.py  tasks.py
frontend/: next.config.js  package.json
frontend/pages/: index.js
frontend/pages/components/: TaskManager.js  TodoList.js
