[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend"
authors = ["Chong"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
slack-sdk = "^3.34.0"
openai = "^1.59.6"
sqlalchemy = "^2.0.37"
pydantic-settings = "^2.7.1"
google-auth = "^2.37.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.158.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
